--- a/SITE_APRESENTAÇÃO_IRATI/CSS/style.css
+++ b/SITE_APRESENTAÇÃO_IRATI/CSS/style.css
@@ -19,6 +19,8 @@ h4{
 }
 p{
     color: #404040;
+    font-family:"Minion W01 Cap Regular";
+    font-size: 20px;
 }
 
 *{
@@ -54,7 +56,7 @@ p{
     top: calc(2em + 4px);
     z-index: -2;
     width: 100vw;
-    height: 100vh;
+    height: 200vh;
     background-color: #fff;
     }
     .aba:target .conteudo {
@@ -63,9 +65,9 @@ p{
 
 .intro {
     margin: 8px;
-    display: block;
-    width: 100vw;
-    height: 100vh;
+    display: initial;
+    width: 90vw;
+    height: 90vh;
     padding: 0px;
     text-align: center;
     color: #fff;
@@ -75,6 +77,31 @@ p{
     -moz-background-size: contain;
     background-size: contain;
     -o-background-size: contain;
+}
+
+html, body {
+    min-height: 100%;
+}
+body {
+    padding: 0;
+    margin: 0;
+}
+        
+html, body {
+    min-height: 100%;
+}
+body {
+    padding: 0;
+    margin: 0;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 160px;    
+    text-align: center;
+    line-height: 100px;
 }
 
 @font-face{
